[#490] (fix) Alinear verticalmente el encabezado del concurso en móviles (sección detalle). Cambio de `align-items: flex-end` a `center` en `.uc-hero`.

--- a/angular/src/app/info-centro/presentacion-ultimo-concurso/presentacion-ultimo-concurso.component.scss
+++ b/angular/src/app/info-centro/presentacion-ultimo-concurso/presentacion-ultimo-concurso.component.scss
@@ -94,7 +94,7 @@
 
 .uc-hero {
         height: 100vh;
-        align-items: flex-end;
+        align-items: center;
     }
 
     .uc-overlay {
